--- a/src/assets/css/base/_base.scss
+++ b/src/assets/css/base/_base.scss
@@ -13,9 +13,11 @@ body {
     max-width: 100%;
     height: 100%;
     overflow-x: hidden;
-    // font-family: 'futura-pt', sans-serif;
+    font-family: 'Open Sans',
+        sans-serif;
     font-size: 1.6rem;
     font-weight: 200;
-    // color: #161616;
+    color: 27251F;
+    line-height: 1.2;
     letter-spacing: .07rem;
 }
