--- a/src/assets/css/base/_typography.scss
+++ b/src/assets/css/base/_typography.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap');
+
 html {
     // This defines what 1 rem is
     font-size: 62.5%;
