Top nave and hero section styling complete for mobile devices

--- a/src/assets/css/base/_base.scss
+++ b/src/assets/css/base/_base.scss
@@ -17,7 +17,7 @@ body {
         sans-serif;
     font-size: 1.6rem;
     font-weight: 200;
-    color: 27251F;
+    color: #27251F;
     line-height: 1.2;
     letter-spacing: .07rem;
 }
