--- a/src/assets/css/abstracts/_mixins.scss
+++ b/src/assets/css/abstracts/_mixins.scss
@@ -1,3 +1,24 @@
 @mixin link-hover {
     transition: all .4s ease-in-out;
 }
+
+
+// Small devices (landscape phones, 576px and up)
+// @include media-breakpoint-up(sm) {
+//     ...
+// }
+
+// Medium devices (tablets, 768px and up)
+// @include media-breakpoint-up(md) {
+//     ...
+// }
+
+// Large devices (desktops, 992px and up)
+// @include media-breakpoint-up(lg) {
+//     ...
+// }
+
+// Extra large devices (large desktops, 1200px and up)
+// @include media-breakpoint-up(xl) {
+//     ...
+// }
