--- a/src/assets/css/base/_typography.scss
+++ b/src/assets/css/base/_typography.scss
@@ -1,36 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap');
 
 html {
-    // This defines what 1 rem is
+    // This defines what 1 rem is (10px)
     font-size: 62.5%;
 }
 
 h1 {
-    font-size: 4rem;
-    font-weight: 200;
-}
+    font-size: 3rem;
+    font-weight: 600;
 
-h2 {
-    font-size: 5rem;
-    font-weight: 200;
-}
-
-h3 {
-    font-size: 3.4rem;
-    font-weight: 200;
-}
-
-h4 {
-    font-size: 1.7rem;
-    font-weight: 200;
-}
-
-h5 {
-    font-size: 1.6rem;
-    font-weight: 200;
+    @include media-breakpoint-up(md) {
+        font-size: 4rem;
+    }
 }
 
 p {
-    line-height: 1.5;
-    font-weight: 200;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.7;
+
+    @include media-breakpoint-up(md) {
+        font-size: 20px;
+    }
 }
