--- a/src/assets/css/layout/_top-nav.scss
+++ b/src/assets/css/layout/_top-nav.scss
@@ -11,4 +11,8 @@ header {
     //     max-width: 14.5rem;
     //     width: 10rem
     // }
+
+    .top-nav {
+        padding: 0 0 2rem 0;
+    }
 }
