Styling complete for all devices. Ready for animations

--- a/src/assets/css/components/_buttons.scss
+++ b/src/assets/css/components/_buttons.scss
@@ -1,6 +1,11 @@
 a {
     color: #27251F;
     display: inline-block;
+
+    &:hover {
+        color: #27251F;
+        text-decoration: none;
+    }
 }
 
 // ----------------------------------------------------------------
