--- a/src/assets/css/layout/_footer.scss
+++ b/src/assets/css/layout/_footer.scss
@@ -1,14 +1,31 @@
 .footer {
     padding: 10rem 0 5rem 0;
 
-    .pandora-disney-logo {
-        width: 60%;
+    @include media-breakpoint-up(lg) {
+        padding-top: 5rem;
+    }
+
+    .footer-logo {
+        max-width: 8.625rem;
         margin: 0 auto;
+
+        .pandora-disney-logo {
+            width: 100%;
+        }
     }
 
     .copyright {
         font-size: 10px;
-        margin-top: 1rem;
+        margin: 1rem auto 0 auto;
         opacity: .5;
+        width: 80%;
+
+        @include media-breakpoint-up(sm) {
+            width: 60%;
+        }
+
+        @include media-breakpoint-up(md) {
+            width: 40%;
+        }
     }
 }
