--- a/src/assets/css/layout/_main-content.scss
+++ b/src/assets/css/layout/_main-content.scss
@@ -2,21 +2,59 @@
     >.content-wrapper {
         padding: 5rem 1rem 0 1rem;
         // background-image: linear-gradient(176deg, #FFB1DE 70%, #F9FAFB calc(70% + 2px))
-        background-image: linear-gradient(166deg, #FFB1DE 37%, #F9FAFB calc(37% + 1px))
-    }
+        background-image: linear-gradient(166deg, #FFB1DE 37%, #F9FAFB calc(37% + 1px));
 
-    .main-featured-img-wrapper {
-        margin: 0 auto;
-    }
-
-    .main-txt-block {
-        .pandora-disney-logo {
-            width: 70%;
-            padding-top: 1rem;
+        @include media-breakpoint-up(sm) {
+            padding: 5rem 2rem;
         }
 
-        .txt {
-            padding-top: 1rem;
+        @include media-breakpoint-up(lg) {
+            background-image: linear-gradient(166deg, #FFB1DE 65%, #F9FAFB calc(65% + 1px));
+            padding-top: 15rem;
+        }
+
+        >div {
+
+            @include media-breakpoint-up(lg) {
+                width: 80%;
+                margin: 0 auto;
+                justify-content: space-between;
+            }
+
+            .main-featured-img-wrapper {
+                // margin: 0 auto;
+                flex: 0 0 45%;
+            }
+
+            .main-txt-block {
+
+                @include media-breakpoint-up(lg) {
+                    margin-top: auto;
+                    padding-bottom: 0.8rem;
+                    flex: 0 0 45%;
+                }
+
+                .pandora-disney-logo {
+                    max-width: 15rem;
+                    padding-top: 1rem;
+
+                    @include media-breakpoint-up(md) {
+                        max-width: 20.5rem;
+                    }
+                }
+
+                .txt {
+                    padding-top: 1rem;
+
+                    @include media-breakpoint-up(sm) {
+                        width: 90%;
+                    }
+
+                    @include media-breakpoint-up(lg) {
+                        width: 100%;
+                    }
+                }
+            }
         }
     }
 }
