Mid nav hover effects complete

--- a/src/assets/css/abstracts/_mixins.scss
+++ b/src/assets/css/abstracts/_mixins.scss
@@ -2,6 +2,10 @@
     transition: width .4s;
 }
 
+@mixin link-hover {
+    transition: all .4s ease-in-out;
+}
+
 
 // Small devices (landscape phones, 576px and up)
 // @include media-breakpoint-up(sm) {
