--- a/src/assets/css/components/_buttons.scss
+++ b/src/assets/css/components/_buttons.scss
@@ -16,6 +16,8 @@ a {
     text-transform: uppercase;
     margin-top: 3rem;
     padding: 1.3rem 7.4rem;
+    @include link-hover;
+    position: relative;
 
     &--black {
         border: solid #27251F 1px;
@@ -24,6 +26,46 @@ a {
     &--red {
         border: solid red 1px;
     }
+
+    &:hover {
+        border: solid #fff 1px;
+        color: #fff;
+
+        :after,
+        :before {
+            transform: scale(1);
+            -webkit-transform: scale(1);
+        }
+    }
+
+    &:before,
+    :after {
+        width: 100%;
+        height: 100%;
+        z-index: 3;
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        box-sizing: border-box;
+        transform: scale(0);
+        -webkit-transform: scale(0);
+        transition: 0.5s;
+    }
+}
+
+.box-animation::before {
+    border-bottom: 3px solid #FFF;
+    border-left: 3px solid #FFF;
+    transform-origin: 0 100%;
+    -webkit-transform-origin: 0 100%;
+}
+
+.box-animation:after {
+    border-top: 3px solid #FFF;
+    border-right: 3px solid #FFF;
+    transform-origin: 100% 0%;
+    -webkit-transform-origin: 100% 0%;
 }
 
 // ----------------------------------------------------------------
@@ -43,5 +85,11 @@ a {
         bottom: -.5rem;
         transform: translateX(-50%);
         background-color: #F40D0D;
+        @include link-hover;
     }
+
+    &:hover:after {
+        width: 0;
+    }
+
 }
