--- a/src/assets/css/layout/_footer.scss
+++ b/src/assets/css/layout/_footer.scss
@@ -1,31 +1,36 @@
 .footer {
-    padding: 10rem 0 5rem 0;
+    padding: 5rem 0 5rem 0;
 
     @include media-breakpoint-up(lg) {
         padding-top: 5rem;
     }
 
-    .footer-logo {
-        max-width: 8.625rem;
-        margin: 0 auto;
+    .content-wrapper {
+        border-top: solid rgba(227, 226, 226, 0.5) 1px;
+        padding-top: 5rem;
 
-        .pandora-disney-logo {
-            width: 100%;
-        }
-    }
+        .footer-logo {
+            max-width: 8.625rem;
+            margin: 0 auto;
 
-    .copyright {
-        font-size: 10px;
-        margin: 1rem auto 0 auto;
-        opacity: .5;
-        width: 80%;
-
-        @include media-breakpoint-up(sm) {
-            width: 60%;
+            .pandora-disney-logo {
+                width: 100%;
+            }
         }
 
-        @include media-breakpoint-up(md) {
-            width: 40%;
+        .copyright {
+            font-size: 10px;
+            margin: 1rem auto 0 auto;
+            opacity: .5;
+            width: 80%;
+
+            @include media-breakpoint-up(sm) {
+                width: 60%;
+            }
+
+            @include media-breakpoint-up(md) {
+                width: 40%;
+            }
         }
     }
 }
