--- a/src/assets/css/layout/_main-content.scss
+++ b/src/assets/css/layout/_main-content.scss
@@ -1,14 +1,14 @@
 .main-content {
     >.content-wrapper {
         padding: 5rem 1rem 0 1rem;
-        background-image: linear-gradient(166deg, #FFB1DE 37%, #F9FAFB calc(37% + 1px));
+        background-image: linear-gradient(166deg, #f6b3bf 37%, #F9FAFB calc(37% + 1px));
 
         @include media-breakpoint-up(sm) {
             padding: 5rem 2rem;
         }
 
         @include media-breakpoint-up(lg) {
-            background-image: linear-gradient(166deg, #FFB1DE 65%, #F9FAFB calc(65% + 1px));
+            background-image: linear-gradient(166deg, #f6b3bf 65%, #F9FAFB calc(65% + 1px));
             padding-top: 15rem;
         }
 
