Changed all image paths for deployment with webpack. Development complete

--- a/src/assets/css/layout/_hero.scss
+++ b/src/assets/css/layout/_hero.scss
@@ -3,7 +3,7 @@
     .content-wrapper {
 
         .hero-bg-img {
-            background-image: url(/src/assets/images/hero-bg.jpg);
+            // background-image: url(/src/assets/images/hero-bg.jpg);
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
